# Mango-Apps

./: push_command.md
Calendar/: .gitignore  app.py
Notes/: .gitignore  pyproject.toml  requirements.txt  run.py  token_calculator.ipynb
Notes/.agent/rules/: references.md
Notes/apps/: example.md
Notes/apps/LA/linear_combinations_span_basis/: info.json  linear_algebra_basis_visualizer.html  linear_algebra_explorer.html  linear_algebra_span_explorer.html  linear_combinations_span_basis.md
Notes/apps/LA/vectors/: info.json  vector_addition.html  vectors.md
Notes/apps/example/: example.html  example.md  info.json
Notes/apps/mathematics/eigenvalues_eigenvectors/: eigenvalue_calculator.html  eigenvalue_dynamics.html  eigenvalue_explorer.html  eigenvalue_transformation.html  eigenvalues-eigenvectors-visualization.html  eigenvalues_eigenvectors.md  info.json
Notes/apps/mathematics/linear_derivatives/: info.json  linear_derivative_visualization.html  linear_derivatives.md
Notes/apps/mathematics/linear_differential_equations/: info.json  linear_differential_equations.md  ode_step_solver.html
Notes/apps/mathematics/slope_fields_ode/: info.json  slope_field_explorer.html  slope_fields_ode.md
Notes/apps/notes/: apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
Notes/core/: settings.py  urls.py
Notes/docs/: details.md  plans.md  structure.md  topic_create.md
Notes/docs/json/: example_initial.json  visualization.json
Notes/docs/libs/: geminiapi.md  perplexity_grounded_api.md  perplexity_search_api.md
Notes/web/templates/: base.html
(+295 files in other folders)
